Added mechanics to change active inventory slot with a visual component

--- a/TheMidnightCram/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TheMidnightCram/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -197,7 +197,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/FirstPerson/Game_SFX
+ContentBrowserDrawer.SelectedPaths=/Game/FirstPerson/Blueprints/UI
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -240,12 +240,12 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
@@ -272,9 +272,9 @@ RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialEditor
+OpenAssetsAtExit=/Game/FirstPerson/Blueprints/UI/HotBar.HotBar
 OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
 OpenAssetsAtExit=/Game/FirstPerson/Blueprints/UI/PageCounter.PageCounter
-OpenAssetsAtExit=/Game/FirstPerson/Blueprints/UI/HotBar.HotBar
 
 [PlacementMode]
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
@@ -847,7 +847,7 @@ Texture2D.File Path=True
 Texture2D.Compositing=True
 Image.Layout=True
 Image.Appearance=True
-Image.Accessibility=True
+Image.Accessibility=False
 Image.Behavior=True
 Image.Render Transform=True
 Image.Performance=True
@@ -897,6 +897,49 @@ HotBar_C.Localization=True
 HotBar_C.Accessibility=True
 HotBar_C.Rendering=True
 HotBar_C.Navigation=True
+Overlay.Layout=True
+Overlay.Behavior=True
+Overlay.Accessibility=True
+Overlay.Render Transform=True
+Overlay.Performance=True
+Overlay.Rendering=True
+Overlay.Navigation=True
+Overlay.Localization=True
+BackgroundBlur.Layout=True
+BackgroundBlur.Content=True
+BackgroundBlur.Appearance=True
+BackgroundBlur.Accessibility=True
+BackgroundBlur.Behavior=True
+BackgroundBlur.Render Transform=True
+BackgroundBlur.Performance=True
+BackgroundBlur.Rendering=True
+BackgroundBlur.Navigation=True
+BackgroundBlur.Localization=True
+CameraComponent.Variable=True
+CameraComponent.TransformCommon=True
+CameraComponent.Sockets=True
+CameraComponent.CameraSettings=True
+CameraComponent.CameraOptions=True
+CameraComponent.Camera=True
+CameraComponent.ComponentTick=True
+CameraComponent.PostProcess=True
+CameraComponent.Tags=True
+CameraComponent.ComponentReplication=True
+CameraComponent.Activation=True
+CameraComponent.Cooking=True
+CameraComponent.Events=True
+K2Node_SwitchInteger.PinOptions=True
+Border.Layout=True
+Border.Content=True
+Border.Appearance=True
+Border.Accessibility=True
+Border.Behavior=True
+Border.Render Transform=True
+Border.Performance=True
+Border.Rendering=True
+Border.Navigation=True
+Border.Localization=True
+Border.Events=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -2032,10 +2075,10 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/Control
 RecentsFiles=M:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/FirstPerson/Blueprints/UI/HotBar
-MRUItem1=/Game/UI_Images/BatteryIcon
-MRUItem2=/Game/FirstPerson/Blueprints/UI/PageCounter
-MRUItem3=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem0=/Game/FirstPerson/Blueprints/UI/PageCounter
+MRUItem1=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem2=/Game/FirstPerson/Blueprints/UI/HotBar
+MRUItem3=/Game/UI_Images/BatteryIcon
 MRUItem4=/Game/StarterContent/Materials/M_Basic_Wall
 MRUItem5=/Game/GraingerOutside_Wall_North1
 MRUItem6=/Game/GraingerOutside_2X2Window
@@ -2210,7 +2253,7 @@ NavMovementComponent="\"Object\" \"Object.NavMovement.NavAgentProps\" "
 MovementComponent="\"Object\" \"Object.NavMovement.NavAgentProps\" "
 K2Node_InputKey="\"Object\" "
 K2Node="\"Object\" "
-EdGraphNode="\"Object\" \"Object.AI.AI|BehaviorTree\" "
+EdGraphNode="\"Object\" "
 EdGraphNode_Comment="\"Object\" "
 BP_FirstPersonPlayerController_C=
 PlayerController=
@@ -2288,9 +2331,21 @@ MaterialExpressionVectorParameter="\"Object\" "
 BP_FirstPersonCharacter_C="\"Object\" "
 Texture2D="\"Object\" "
 Texture="\"Object\" "
-Image="\"Object\" \"Object.Appearance.Brush\" "
+Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Alignment\" "
 PageCounter_C="\"Object\" "
 HotBar_C="\"Object\" "
+Overlay="\"Object\" "
+BackgroundBlur="\"Object\" "
+ContentWidget="\"Object\" \"Object.Content.ContentColorAndOpacity\" \"Object.Appearance.Background\" "
+SpotLightComponent="\"Object\" "
+PointLightComponent="\"Object\" "
+LocalLightComponent="\"Object\" "
+LightComponent="\"Object\" "
+LightComponentBase="\"Object\" "
+CameraComponent="\"Object\" "
+K2Node_SwitchInteger="\"Object\" "
+K2Node_Switch="\"Object\" "
+Border="\"Object\" \"Object.Content.ContentColorAndOpacity\" \"Object.Appearance.Background\" "
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2425,11 +2480,13 @@ FbxImportUI.Miscellaneous=False
 FbxImportUI.Animation=True
 StaticMeshActor.StaticMesh=True
 PropertyWrapper.Variable=False
+Border.Appearance=False
+Image.Accessibility=False
 
 [DetailCustomWidgetExpansion]
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.SpawnLocations
 BP_FirstPersonPlayerController_C=PropertyWrapper.DefaultValueCategory.SpawnLocations
-BP_FirstPersonCharacter_C=
+BP_FirstPersonCharacter_C=PropertyWrapper.DefaultValueCategory.SpawnLocations
 K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.SpawnLocations
 SkeletalMeshComponent=
 K2Node_Variable=PropertyWrapper.DefaultValueCategory.SpawnLocations
@@ -2451,7 +2508,10 @@ SceneComponent=PropertyWrapper.DefaultValueCategory.SpawnLocations,BP_GraingerBo
 Actor=PropertyWrapper.DefaultValueCategory.SpawnLocations,BP_GraingerBob_C.Physics.ConstraintsGroup,BP_GraingerBob_C.Materials.MaterialList
 PlayerStart=PropertyWrapper.DefaultValueCategory.SpawnLocations,BP_GraingerBob_C.Physics.ConstraintsGroup,BP_GraingerBob_C.Materials.MaterialList
 PageCounter_C=
-HotBar_C=
+HotBar_C=PropertyWrapper.DefaultValueCategory.SpawnLocations
+CameraComponent=PropertyWrapper.DefaultValueCategory.SpawnLocations
+StaticMeshComponent=PropertyWrapper.DefaultValueCategory.SpawnLocations
+K2Node_CallFunction=PropertyWrapper.DefaultValueCategory.SpawnLocations
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
@@ -2625,22 +2685,21 @@ bMaterialQualityUsed[2]=0
 bMaterialQualityUsed[3]=0
 
 [WidgetTemplatesExpanded]
-Common=False
 Audio=False
 Editor=False
 Input=False
 Lists=False
 Misc=False
 Optimization=False
-Panel=False
-Primitive=False
-Special Effects=False
+Panel=True
+Primitive=True
+Special Effects=True
 Synth=False
 User Created=False
 Advanced=False
 
 [SelectionDetails]
-PreserveScaleRatio=False
+PreserveScaleRatio=True
 
 [UMGEditor.Designer]
 bCommonResolutionSelected=False
