--- a/TheMidnightCram/Config/DefaultInput.ini
+++ b/TheMidnightCram/Config/DefaultInput.ini
@@ -111,10 +111,10 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
-+ActionMappings=(ActionName="Hide",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
-+ActionMappings=(ActionName="Hide",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=H)
-+AxisMappings=(AxisName="Turn",Scale=0.500000,Key=MouseX)
-+AxisMappings=(AxisName="LookUp",Scale=-0.500000,Key=MouseY)
++ActionMappings=(ActionName="Interact",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
++ActionMappings=(ActionName="Interact",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=H)
++AxisMappings=(AxisName="Turn",Scale=0.200000,Key=MouseX)
++AxisMappings=(AxisName="LookUp",Scale=-0.200000,Key=MouseY)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Game/FirstPerson/Input/MobileControls.MobileControls
