Updated Last Push

--- a/TheMidnightCram/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TheMidnightCram/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -242,7 +242,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 LastLevel=/Game/FirstPerson/Maps/MainLevel
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=StaticMeshEditor
