--- a/TheMidnightCram/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
+++ b/TheMidnightCram/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
@@ -108,9 +108,9 @@ MultipleInstancePositions=(X=872,Y=536)
 [DetailCustomWidgetExpansion]
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.NewVar,PropertyWrapper.DefaultValueCategory.SpawnLocations,PropertyWrapper.DefaultValueCategory.SpawnLocations2,PropertyWrapper.DefaultValueCategory.Designs,K2Node_VariableGet.DefaultValueCategory.SpawnLocations2
 Note_C=PropertyWrapper.DefaultValueCategory.NewVar,PropertyWrapper.DefaultValueCategory.SpawnLocations,PropertyWrapper.DefaultValueCategory.SpawnLocations2,K2Node_VariableGet.DefaultValueCategory.SpawnLocations2
-SceneComponent=PropertyWrapper.DefaultValueCategory.NewVar,PropertyWrapper.DefaultValueCategory.SpawnLocations,PropertyWrapper.DefaultValueCategory.SpawnLocations2,PropertyWrapper.DefaultValueCategory.Designs,K2Node_VariableGet.DefaultValueCategory.SpawnLocations2,StaticMeshActor.Physics.ConstraintsGroup
+SceneComponent=
 Drink_BP_C=
-StaticMeshActor=PropertyWrapper.DefaultValueCategory.NewVar,PropertyWrapper.DefaultValueCategory.SpawnLocations,PropertyWrapper.DefaultValueCategory.SpawnLocations2,PropertyWrapper.DefaultValueCategory.Designs,K2Node_VariableGet.DefaultValueCategory.SpawnLocations2,StaticMeshActor.Physics.ConstraintsGroup
+StaticMeshActor=PropertyWrapper.DefaultValueCategory.NewVar,PropertyWrapper.DefaultValueCategory.SpawnLocations,PropertyWrapper.DefaultValueCategory.SpawnLocations2,PropertyWrapper.DefaultValueCategory.Designs,K2Node_VariableGet.DefaultValueCategory.SpawnLocations2,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision
 BP_FirstPersonPlayerController_C=
 K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.NewVar,PropertyWrapper.DefaultValueCategory.SpawnLocations,PropertyWrapper.DefaultValueCategory.SpawnLocations2,PropertyWrapper.DefaultValueCategory.Designs,K2Node_VariableGet.DefaultValueCategory.SpawnLocations2
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.NewVar,PropertyWrapper.DefaultValueCategory.SpawnLocations,PropertyWrapper.DefaultValueCategory.SpawnLocations2,PropertyWrapper.DefaultValueCategory.Designs,K2Node_VariableGet.DefaultValueCategory.SpawnLocations2
@@ -293,12 +293,12 @@ DrawPrimitiveDebuggerUserSettings=EditorKeyboardShortcutSettings.EditorViewport.
 GameplayDebuggerUserSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.OpenRecentFile,EditorKeyboardShortcutSettings.MainFrame.SwitchProject
 GameplayTagsDeveloperSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.OpenRecentFile,EditorKeyboardShortcutSettings.MainFrame.SwitchProject
 LogVisualizerSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.OpenRecentFile,EditorKeyboardShortcutSettings.MainFrame.SwitchProject
-StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision
+StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.NewVar,PropertyWrapper.DefaultValueCategory.SpawnLocations,PropertyWrapper.DefaultValueCategory.SpawnLocations2,PropertyWrapper.DefaultValueCategory.Designs,K2Node_VariableGet.DefaultValueCategory.SpawnLocations2
 Actor=PropertyWrapper.DefaultValueCategory.NewVar,PropertyWrapper.DefaultValueCategory.SpawnLocations,PropertyWrapper.DefaultValueCategory.SpawnLocations2,PropertyWrapper.DefaultValueCategory.Designs,K2Node_VariableGet.DefaultValueCategory.SpawnLocations2,StaticMeshActor.Physics.ConstraintsGroup
-Desktop_C=PropertyWrapper.DefaultValueCategory.NewVar,PropertyWrapper.DefaultValueCategory.SpawnLocations,PropertyWrapper.DefaultValueCategory.SpawnLocations2,PropertyWrapper.DefaultValueCategory.Designs,K2Node_VariableGet.DefaultValueCategory.SpawnLocations2,StaticMeshActor.Physics.ConstraintsGroup
+Desktop_C=PropertyWrapper.DefaultValueCategory.NewVar,PropertyWrapper.DefaultValueCategory.SpawnLocations,PropertyWrapper.DefaultValueCategory.SpawnLocations2,PropertyWrapper.DefaultValueCategory.Designs,K2Node_VariableGet.DefaultValueCategory.SpawnLocations2,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/BasementStuff/Desktop
+ContentBrowserTab1.SelectedPaths=/Game/GraingerMeshes/liftdoor
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.FavoritesAreaExpanded=False
 ContentBrowserDrawer.PathAreaExpanded=True
@@ -358,6 +358,8 @@ ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
+AssetDialog.ThumbnailSize=2
+AssetDialog.CurrentViewType=1
 
 [EditorStartup]
 LastLevel=/Game/FirstPerson/Maps/MainLevel
@@ -365,7 +367,7 @@ LastLevel=/Game/FirstPerson/Maps/MainLevel
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
-RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
@@ -396,7 +398,7 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/BasementStuff/Desktop/Desktop
+MRUItem0=/Game/GraingerMeshes/liftdoor/source/model/doors
 MRUItem1=/Game/BasementStuff/Desktop/display
 MRUItem2=/Game/BasementStuff/Desktop/Screen
 MRUItem3=/Game/BasementStuff/Desktop/front_panel
@@ -1488,8 +1490,9 @@ SkeletalMeshComponent.Cooking=True
 SkeletalMeshComponent.Events=True
 MaterialExpressionMaterialFunctionCall.MaterialExpressionMaterialFunctionCall=True
 MaterialExpressionMaterialFunctionCall.MaterialExpression=True
-Desktop_C.TransformCommon=False
+Desktop_C.TransformCommon=True
 Desktop_C.Networking=True
+MeshMergingSettingsObject.MergeSettings=True
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter=0
@@ -1670,8 +1673,8 @@ StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.B
 StaticMeshComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 MeshComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PrimitiveComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SceneComponent=
-ActorComponent=
+SceneComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ActorComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SkeletalMeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SkinnedMeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 
@@ -1738,9 +1741,18 @@ ChangeVariableType_Warning=False
 DeleteConfirmationVariable_Warning=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/GraingerMeshes/liftdoor/Elevator.Elevator;
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/GraingerMeshes/liftdoor/source/model/model_pCube18.model_pCube18;
+RecentlyPlaced=/Game/GraingerMeshes/liftdoor/source/model/model_polySurface3.model_polySurface3;
+RecentlyPlaced=/Game/BasementStuff/Desktop/Sketchfab_2023_04_17_00_03_12_Cube_005.Sketchfab_2023_04_17_00_03_12_Cube_005;
+RecentlyPlaced=/Game/BasementStuff/Desktop/Sketchfab_2023_04_17_00_03_12_Cube_003.Sketchfab_2023_04_17_00_03_12_Cube_003;
+RecentlyPlaced=/Game/BasementStuff/Desktop/Sketchfab_2023_04_17_00_03_12_Cube_002.Sketchfab_2023_04_17_00_03_12_Cube_002;
+RecentlyPlaced=/Game/BasementStuff/Desktop/Sketchfab_2023_04_17_00_03_12_Cube_004.Sketchfab_2023_04_17_00_03_12_Cube_004;
+RecentlyPlaced=/Game/BasementStuff/Desktop/Sketchfab_2023_04_17_00_03_12_Cube_001.Sketchfab_2023_04_17_00_03_12_Cube_001;
+RecentlyPlaced=/Game/BasementStuff/Desktop/Sketchfab_2023_04_17_00_03_12_Cube.Sketchfab_2023_04_17_00_03_12_Cube;
 RecentlyPlaced=/Game/BasementStuff/Desktop/Desktop.Desktop;
 RecentlyPlaced=/Game/GraingerMeshes/desk/TableHide2_BP1.TableHide2_BP1;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/StarterContent/Textures/T_Ground_Grass_Mat.T_Ground_Grass_Mat;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Ground_Grass.M_Ground_Grass;
 RecentlyPlaced=/Game/GraingerMeshes/Table/source/TableHide_BP.TableHide_BP;
@@ -1749,15 +1761,6 @@ RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDir
 RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Game/BasementStuff/office-lamp/source/Timberland_lamp.Timberland_lamp;
-RecentlyPlaced=/Game/BasementStuff/VendingMachine/VendingMachine.VendingMachine;
-RecentlyPlaced=/Game/BasementStuff/VendingMachine/vending_machine01_Cube_Slice_003.vending_machine01_Cube_Slice_003;
-RecentlyPlaced=/Game/BasementStuff/VendingMachine/vending_machine_2_-_2.vending_machine_2_-_2;
-RecentlyPlaced=/Game/BasementStuff/stylized-vending-machine/Vending_Machine_Vend_Body.Vending_Machine_Vend_Body;
-RecentlyPlaced=/Game/BasementStuff/stylized-vending-machine/lowpoly.lowpoly;
-RecentlyPlaced=/Game/BasementStuff/stylized-vending-machine/finish/vending_machine01_Cylinder_018.vending_machine01_Cylinder_018;
-RecentlyPlaced=/Game/BasementStuff/stylized-vending-machine/finish/vending_machine01_Cylinder_007.vending_machine01_Cylinder_007;
-RecentlyPlaced=/Game/BasementStuff/stylized-vending-machine/finish/vending_machine01_Cylinder_004.vending_machine01_Cylinder_004;
-RecentlyPlaced=/Game/BasementStuff/stylized-vending-machine/finish/vending_machine01_Cube_Slice_003.vending_machine01_Cube_Slice_003;
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1773,9 +1776,9 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/FirstPerson/Maps/MainLevel.MainLevel", ()))
 
 [RootWindow]
-ScreenPosition=X=0.000 Y=38.500
-WindowSize=X=1512.000 Y=893.000
-InitiallyMaximized=True
+ScreenPosition=X=109.000 Y=90.500
+WindowSize=X=1512.000 Y=892.000
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2837,7 +2840,6 @@ RecentsFiles=/Applications/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Py
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [MaterialEditor]
 PrimType=1
@@ -3117,7 +3119,7 @@ GameplayTagsDeveloperSettings=True
 LogVisualizerSettings=True
 
 [SelectionDetails]
-PreserveScaleRatio=True
+PreserveScaleRatio=False
 
 [PropertyWindowWidths]
 PropertyEditorToolkit_PinAsColumnHeader=24
