--- a/TheMidnightCram/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TheMidnightCram/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -3939,6 +3939,8 @@ TextureEditor.TimeStamp=2024.01.19-05.56.56
 TextureEditor.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2023.12.20-22.35.45
 ExternalImagePicker.LastCompileMethod=Unknown
+NullDrv.TimeStamp=2024.05.27-23.40.31
+NullDrv.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
