--- a/TheMidnightCram/Config/DefaultEngine.ini
+++ b/TheMidnightCram/Config/DefaultEngine.ini
@@ -12,7 +12,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/FirstPerson/Maps/MainLevel.MainLevel
-ServerDefaultMap=/Engine/Maps/Entry
+ServerDefaultMap=/Game/FirstPerson/Maps/MainLevel.MainLevel
 GlobalDefaultGameMode=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode.BP_FirstPersonGameMode_C
 GlobalDefaultServerGameMode=None
 
