--- a/TheMidnightCram/Config/DefaultEngine.ini
+++ b/TheMidnightCram/Config/DefaultEngine.ini
@@ -6,7 +6,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/FirstPerson/Maps/MainLevel.MainLevel
 LocalMapOptions=
-TransitionMap=
+TransitionMap=/Game/FirstPerson/Maps/MainLevel.MainLevel
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
